--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.datasource.password=123456789
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+app.account.sid=1
+app.auth.token=1
+app.send.grid.key=1
+
 
 app.cipher.salt.length=16
 app.cipher.hash.length=32
@@ -16,4 +20,11 @@ app.cipher.iterations=5
 app.https=false
 app.token.time.expiration=8
 #key for JWT example 12XASWQAAA54545454878454asas@@dssdsd
-app.token.secret.key=
+app.token.secret.key=12XASWQAAA54545454878454asas@@dssdsd
+
+server.port=8081
+
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
