--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,13 @@ app.cipher.memory=2024
 app.cipher.iterations=5
 
 app.https=false
-app.token.time.expiration=8
+app.token.time.expiration=12
 #key for JWT example 12XASWQAAA54545454878454asas@@dssdsd
 app.token.secret.key=12XASWQAAA54545454878454asas@@dssdsd
 
 server.port=8081
 
 spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
-#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
