--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ app.token.time.expiration=12
 app.token.secret.key=12XASWQAAA54545454878454asas@@dssdsd
 
 server.port=8081
-
+app.allow.origins=http://localhost:4200,stidev.casa,https://stidev.casa,www.stidev.casa
 spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
