--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,12 @@ jobs:
           sed -i "/^spring.datasource.username=/c\spring.datasource.username=${{ secrets.DATABASE_USERNAME }}" $CONFIG_FILE || echo "spring.datasource.username=${{ secrets.DATABASE_USERNAME }}" >> $CONFIG_FILE
           # Esta línea preserva caracteres especiales en la contraseña
           sed -i "/^spring.datasource.password=/c\spring.datasource.password=$(printf '%s\n' "${{ secrets.DATABASE_PASSWORD }}")" $CONFIG_FILE || echo "spring.datasource.password=$(printf '%s\n' "${{ secrets.DATABASE_PASSWORD }}")" >> $CONFIG_FILE
-
+          # SSL
+          sed -i "/^server.ssl.key-store=/c\server.ssl.key-store=${{ secrets.KEY_STORE }}" $CONFIG_FILE || echo "server.ssl.key-store=${{ secrets.KEY_STORE }}" >> $CONFIG_FILE
+          sed -i "/^server.ssl.key-store-password=/c\server.ssl.key-store-password=${{ secrets.KEY_STORE_PASSWORD }}" $CONFIG_FILE || echo "server.ssl.key-store-password=${{ secrets.KEY_STORE_PASSWORD }}" >> $CONFIG_FILE
+          sed -i "/^server.ssl.key-store-type=/c\server.ssl.key-store-type=PKCS12" $CONFIG_FILE || echo "server.ssl.key-store-type=PKCS12" >> $CONFIG_FILE
+          sed -i "/^server.ssl.key-alias=/c\server.ssl.key-alias=tomcat" $CONFIG_FILE || echo "server.ssl.key-alias=tomcat" >> $CONFIG_FILE
+          
           sed -i "/^server.port=/c\server.port=8081" $CONFIG_FILE || echo "server.port=8081" >> $CONFIG_FILE
 
           # Verificar contenido final del archivo
