--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=securityLayer
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_accounting
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -27,4 +27,6 @@ server.port=8081
 spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+
+app.allow.origins=http://localhost:4200,stidev.casa
+
