added connection pool

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,15 @@ spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=25
 logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-app.allow.origins=http://localhost:4200,stidev.casa
-
 
 
 server.ssl.key-store=
 server.ssl.key-store-password=
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=tomcat
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
